--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,15 +32,22 @@ jobs:
         # Including osqueryi.exe in the bin/ directory as required by OSQueryClient
         pyinstaller --noconfirm --onefile --windowed --name "ProjectX" --add-binary "bin/osqueryi.exe;bin" app.py
 
-    - name: SignPath.io Signing
-      # This step requires SignPath account configuration
-      # It ensures the build integrity by signing the artifact directly from the CI runner
-      uses: signpath/github-action-submit-artifacts@v1
+    - name: Upload Unsigned Artifact
+      uses: actions/upload-artifact@v4
+      id: upload-unsigned-artifact
       with:
-        api_token: ${{ secrets.SIGNPATH_API_TOKEN }}
-        organization_id: ${{ secrets.SIGNPATH_ORG_ID }}
-        project_slug: 'ProjectX'
+        name: unsigned-artifact
+        path: dist/ProjectX.exe
+
+    - name: Submit Signing Request to SignPath.io
+      # Casing MUST be 'SignPath' (capital S and P)
+      uses: SignPath/github-action-submit-signing-request@v2
+      with:
+        api-token: ${{ secrets.SIGNPATH_API_TOKEN }}
+        organization-id: ${{ secrets.SIGNPATH_ORG_ID }}
+        project-slug: 'ProjectX'
         signing_policy_slug: 'release-signing'
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        wait_for_completion: true
-        output_artifact_directory: 'dist/signed'
+        github-artifact-id: ${{ steps.upload-unsigned-artifact.outputs.artifact-id }}
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        wait-for-completion: true
+        output-artifact-directory: 'dist/signed'
